# dawgatron

./: .env  LICENSE  README.md  main.py  nixpacks.toml  pyproject.toml
src/: bot.py  commands.py
