[project]
name = "dawgatron"
version = "0.1.0"
description = "ban people who aren't supposed to be here"
dependencies = [
    "py-cord>=2.5.0",
    "jishaku>=2.5.2",
    "redis>=5.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.0",
    "ruff>=0.3.7",
    "mypy>=1.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dawgatron"]
